testsuite/tests/partial-sigs/should_compile/PatternSplice.hs
{-# LANGUAGE TemplateHaskell #-}
{-# LANGUAGE PartialTypeSignatures #-}
module PatternSplice where

foo $( [p| (x :: _) |] ) = x
