testsuite/tests/partial-sigs/should_fail/WildcardInTypeBrackets.hs
{-# LANGUAGE TemplateHaskell #-}
module WildcardInTypeBrackets where

foo = [t| _ |]
